@@ -4,3 +4,4 @@ timesheet_user                  = Timesheet User
 add_hours                       = Add hours
 add_hours_all                   = Add hours all
 view_hours_all                  = View hours all
+consolidate_hours               = Consolidate hours
