@@ -4,3 +4,4 @@ timesheet_user                  = Timesheet User
 add_hours                       = Aggiunta ore
 add_hours_all                   = Aggiunta ore per tutti
 view_hours_all                  = Visualizzazione ore di tutti
+consolidate_hours               = Consolidamento ore
