@@ -78,6 +78,7 @@
         <permission name="add_hours" title="add_hours" description="" catalog="innowork-timesheet::roles" defaultroles="accounting,employee,seniormanager,projectmanager,freelance,timesheet_user" />
         <permission name="add_hours_all" title="add_hours_all" description="" catalog="innowork-timesheet::roles" defaultroles="accounting,seniormanager,projectmanager,timesheet_manager" />
         <permission name="view_hours_all" title="view_hours_all" description="" catalog="innowork-timesheet::roles"  defaultroles="accounting,hrmanager,seniormanager,projectmanager,timesheet_manager" />
+        <permission name="consolidate_hours" title="consolidate_hours" description="" catalog="innowork-timesheet::roles"  defaultroles="accounting,hrmanager,seniormanager,projectmanager,timesheet_manager" />
 
 	</components>
 </application>
